--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.0",
     "typescript": "5.4.5"
   },
   "prettier": {
